docs/css/intro.css
@import url("https://fonts.googleapis.com/css2?family=Big+Shoulders+Inline:opsz,wght@10..72,100..900&display=swap");
@import url("https://fonts.googleapis.com/css2?family=Turret+Road:wght@200;300;400;500;700;800&display=swap");

:root {
  /* ------------------------------------------------- */
  /* ------------------ Custom Colors ---------------- */
  /* ------------------------------------------------- */

  --clr-dark: 0, 0%, 0%;
  --clr-light: 195, 70%, 90%;
  --clr-span: 195, 36%, 45%;
  --clr-white: 0, 0%, 100%;
  --clr-accent: 231, 77%, 90%;

  /* -------------------------------------------------------- */
  /* ------------------ Custom Font-Sizes ------------------- */
  /* -------------------------------------------------------- */

  /* Step -2: 9.7222px → 11.1111px */
  --step--2: clamp(0.6076rem, 0.5735rem + 0.1561vw, 0.6944rem);
  /* Step -1: 11.6667px → 13.3333px */
  --step--1: clamp(0.7292rem, 0.6882rem + 0.1873vw, 0.8333rem);
  /* Step 0: 14px → 16px */
  --step-0: clamp(0.875rem, 0.8258rem + 0.2247vw, 1rem);
  /* Step 1: 16.8px → 19.2px */
  --step-1: clamp(1.05rem, 0.991rem + 0.2697vw, 1.2rem);
  /* Step 2: 20.16px → 23.04px */
  --step-2: clamp(1.26rem, 1.1892rem + 0.3236vw, 1.44rem);
  /* Step 3: 24.192px → 27.648px */
  --step-3: clamp(1.512rem, 1.4271rem + 0.3883vw, 1.728rem);
  /* Step 4: 29.0304px → 33.1776px */
  --step-4: clamp(1.8144rem, 1.7125rem + 0.466vw, 2.0736rem);
  /* Step 5: 34.8365px → 39.8131px */
  --step-5: clamp(2.1773rem, 2.055rem + 0.5592vw, 2.4883rem);
  /* Step 6: 41.8038px → 47.7757px */

  /* ------------------------------------------------------- */
  /* ----------------- Custom Space-Sizes ------------------ */
  /* ------------------------------------------------------- */

  /* Space 3xs: 4px → 4px */
  --space-3xs: clamp(0.25rem, 0.25rem + 0cqi, 0.25rem);
  /* Space 2xs: 7px → 8px */
  --space-2xs: clamp(0.4375rem, 0.4129rem + 0.1124cqi, 0.5rem);
  /* Space xs: 11px → 12px */
  --space-xs: clamp(0.6875rem, 0.6629rem + 0.1124cqi, 0.75rem);
  /* Space s: 14px → 16px */
  --space-s: clamp(0.875rem, 0.8258rem + 0.2247cqi, 1rem);
  /* Space m: 21px → 24px */
  --space-m: clamp(1.3125rem, 1.2388rem + 0.3371cqi, 1.5rem);
  /* Space l: 28px → 32px */
  --space-l: clamp(1.75rem, 1.6517rem + 0.4494cqi, 2rem);
  /* Space xl: 42px → 48px */
  --space-xl: clamp(2.625rem, 2.4775rem + 0.6742cqi, 3rem);
  /* Space 2xl: 56px → 64px */
  --space-2xl: clamp(3.5rem, 3.3034rem + 0.8989cqi, 4rem);
  /* Space 3xl: 84px → 96px */
  --space-3xl: clamp(5.25rem, 4.9551rem + 1.3483cqi, 6rem);
  /* Space 4xl: 112px → 128px */
  --space-4xl: clamp(7rem, 6.6068rem + 1.7977cqi, 8rem);
  /* Space 5xl: 168px → 192px */
  --space-5xl: clamp(10.5rem, 9.9094rem + 2.6961cqi, 12rem);

  --font-turret-road: "Turret Road", sans-serif;
  --font-turret-road-light: 100;
  --font-turret-road-regular: 400;
  --font-turret-road-bold: 700;

  --font-big-shoulders-inline: "Big Shoulders Inline", sans-serif;
  --font-big-shoulders-inline-light: 100;
}
/* --------------------------------------- */
/* ------------  Custom Colors ----------- */
/* --------------------------------------- */

.text-dark {
  color: hsl(var(--clr-dark));
}

.text-light {
  color: hsl(var(--clr-light));
}

.text-span {
  color: hsl(var(--clr-span));
}

.text-white {
  color: hsl(var(--clr-white));
}

.text-accent {
  color: hsl(var(--clr-accent));
}
/* --------------------------------------- */
html {
  color-scheme: dark only;
}

.intro {
  overflow: clip;
}

.intro > * {
  container-type: inline-size;
  z-index: 1; /* Ensure it is above the background */
}

.intro::before {
  content: "";
  width: 100vw; /* Full viewport width */
  height: 100vh; /* Full viewport height */
  position: fixed;
  top: 0;
  left: 0;
  background: linear-gradient(
        90deg,
        color-mix(in hsl, canvasText, transparent 70%) 1px,
        transparent 1px 30px
      )
      50% 50% / 30px 30px,
    linear-gradient(
        color-mix(in hsl, canvasText, transparent 70%) 1px,
        transparent 1px 30px
      )
      50% 50% / 30px 30px;
  mask: linear-gradient(-20deg, transparent 50%, white) 100%;
  transform-style: preserve-3d;
  transition: transform 0.3s ease-in-out, opacity 0.3s ease-in-out,
    background-position 0.3s ease-in-out;
  z-index: -1; /* Ensure it is behind other content */
  color: hsl(var(--clr-white));
  overflow: hidden;
}

header {
  width: 100%;
  height: 4rem;
  display: flex;
  align-items: center;
  justify-content: space-between;
}

header h2 {
  font-family: "Turret Road", sans-serif;
  font-weight: var(--font-big-shoulders-inline-light);
  font-size: var(--step-1);
  color: hsl(var(--clr-accent));
  margin: var(--space-xs) var(--space-l);
  text-align: center;
}

header h2 span {
  font-family: "Turret Road", sans-serif;
  font-weight: var(--font-turret-road-light);
  font-size: var(--step-1);
  color: hsl(var(--clr-span));
  margin: var(--space-xs) var(--space-l) 0 0;
}

header .bars {
  position: relative;
  height: 3px;
  width: 20px;
  border-radius: 2px;
  background-color: #888888;
  cursor: pointer;
  display: none;
}

header .bars.is-active {
  transform: rotate(90deg);
  width: 35px;
  transform-origin: right;
  transform: translateY(15px) rotate(45deg);
}
header .bars::after,
header .bars::before {
  position: absolute;
  content: "";
  height: 3px;
  left: 0;
  width: 20px;
  border-radius: 2px;
  background: #888888;
  cursor: pointer;
}
header .bars::after {
  bottom: 7px;
}
header .bars::before {
  top: 7px;
}

.nav-links {
  display: flex;
  justify-content: center;
  align-items: center;
  position: relative;
  top: 0;
  left: 0;
  gap: var(--space-xl);
  padding: var(--space-xxs) var(--space-m);
  width: 100%;
  height: 4rem;
  z-index: 2;
  transition: all ease-in-out 0.5s;
}

.nav-links li {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  align-items: center;
  margin: var(--space-xxs) var(--space-xxs);
  padding: var(--space-xxs) var(--space-xxs);
  text-decoration: none;
}

.nav-links li a {
  font-size: var(--step-0);
  text-decoration: none;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  text-align: center;
  color: hsl(var(--clr-accent));
}
.nav-links li a span {
  font-family: "Turret Road", sans-serif;
  font-weight: var(--font-turret-road-light);
  font-size: var(--step-0);
  letter-spacing: 3px;
  margin: var(--space-xxs) 0 0 0;
}

.nav-links li img {
  max-width: 100%;
  display: block;
  height: auto;
  object-fit: cover; /* cover, contain, fill, none, scale-down */
  background-position: center;
  background-size: cover;
  margin-right: var(--space-2xl);
}

.intro-content {
  font-family: "Turret Road", sans-serif;
  font-weight: var(--font-turret-road-light);
  text-align: center;
  overflow: hidden;
  margin: auto;
  padding: 0 var(--space-s);
  min-height: 100svh;
}

.intro-content p {
  font-size: var(--step-1);
  margin-block: 0.1em;
  text-align: center;
}

.intro-content p span {
  font-weight: var(--font-turret-road-regular);
  font-size: var(--step-1);
  color: hsl(var(--clr-span));
  padding-left: var(--space-xs);
}

.intro-content h1,
h2,
h4 {
  font-size: var(--step-1);
  font-weight: var(--font-turret-road-regular);
  margin-block: 0.2em;
  text-align: center;
}

h3 {
  font-size: var(--step-1);
  font-weight: var(--font-turret-road-regular);
  margin-block: 0;
  text-align: center;
}

.little {
  font-size: var(--step-0);
  font-weight: var(--font-turret-road-light);
  margin-block: 0.1em;
  text-align: center;
  letter-spacing: var(--space-xxs);
}

.intro-content a {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  text-decoration: none;
  font-size: var(--step-1);
  color: hsl(var(--clr-white));
  visibility: visible; /* Ensure the parent is visible */
}
.icon {
  margin-block: 0;
  margin-right: var(--space-s);
  color: hsl(var(--clr-span));
}

.intro-content a span {
  font-weight: var(--font-turret-road-bold);
  font-size: var(--step-4);
  color: hsl(var(--clr-span));
  margin-block: var(--space-xs);
}

.wrapper-gradient-text {
  font-family: "Big Shoulders Inline", sans-serif;
  font-weight: var(--font-big-shoulders-inline-light);
  font-size: var(--step-4);
  line-height: 1;
  text-align: center;
  text-shadow: 0px 0px 0px rgb(255, 255, 255);
  margin-bottom: var(--space-xs);
}

.text-layer {
  transform-style: preserve-3d;
  transition: transform 0.3s ease-in-out;
  background: linear-gradient(
    -100deg,
    rgb(105, 142, 163),
    rgb(78, 115, 136),
    rgba(65, 90, 105, 0.6),
    rgba(142, 186, 211, 0.1)
  );
  background-size: 200% 200%;
  background-position: 0% 0%;
  -webkit-background-clip: text;
  background-clip: text;
  color: transparent;
  animation: shadowDrip 3s infinite alternate ease-in-out;
  margin-bottom: 0em;
  padding: 0;
  text-shadow: 0px 15px 0px rgba(255, 255, 255, 0.853);
  transition: filter 0.4s ease-in-out;
  will-change: filter;
  z-index: 1;
  text-align: center;
}

@keyframes shadowDrip {
  0% {
    text-shadow: 0px 0px 0px rgba(255, 255, 255, 0.853);
  }
  100% {
    text-shadow: 0px 10px 20px rgb(255, 255, 255),
      0px 30px 40px rgb(255, 255, 255), 0px 70px 5px rgb(232, 235, 238);
  }
}

@container (max-width: 600px) {
  /* Mobile styles */
  header {
    flex-direction: column;
    align-items: center;
    justify-content: flex-end;
    padding: 0 var(--space-m);
  }

  header .bars {
    display: block;
    transition: 0.5s;
    margin: 0 0 0 var(--space-m);
    cursor: pointer;
  }

  nav {
    position: fixed;
    z-index: 3;
  }
  .nav-links {
    position: fixed;
    top: 0;
    left: 0;
    margin: auto;
    flex-direction: column;
    height: 100vh;
    width: 100%;
    pointer-events: none;
    transition: 0.7s;
    opacity: 0;
  }

  .nav-links li {
    margin: var(--space-xxs) 0;
  }
  .nav-links.open {
    opacity: 1;
    pointer-events: all;
  }
  .nav-links li img {
    max-width: 100%;
    display: block;
    height: auto;
    object-fit: cover; /* cover, contain, fill, none, scale-down */
    background-position: center;
    background-size: cover;
    margin: auto;
  }

  .intro-content {
    margin-bottom: var(--space-1xl);
  }
}

